<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:title="@string/settings"
        app:titleMarginStart="115dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="107dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/adsSettings"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar6" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/bannerAds"
        android:textColorHighlight="#2196F3"
        android:textColorLink="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/sound"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/animation"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/redDotAds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/ic_btn_close_setting"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="51dp"
        android:layout_height="0dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar6"
        app:layout_constraintEnd_toEndOf="@+id/toolbar6"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/close_ad_button"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>